fixed one layout problem with CVLine content

--- a/src/assets/css/components/CVLine.scss
+++ b/src/assets/css/components/CVLine.scss
@@ -25,7 +25,7 @@
 
   .title {
     //@include border-layout-dashed;
-    flex: 1 1;
+    flex-shrink: 1;
     padding: 0 .5rem .5rem;
     margin-right: $container-margin;
     margin-bottom: $bottom-margin-mini;
